.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mspr-ci-front-deployment
  namespace: prod-mspr-ci
spec:
  selector:
    matchLabels:
      app: mspr-ci-front
  replicas: 1
  template:
    metadata:
      labels:
        app: mspr-ci-front
    spec:
      containers:
      - name: mspr-ci-front
        image: "docker.pkg.github.com/Ked57/mspr-ci-front/front:latest"
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcredfrontked
