.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mspr-ci-front-service
  namespace: prod-mspr-ci
  labels:
    app: mspr-ci-front
spec:
  type: ClusterIP
  selector:
    app: mspr-ci-front
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
